[package]
name = "polkadot-test-runtime"
version = "0.9.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.6.1"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", default-features = false , branch = "statemint" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-nicks = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "statemint" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
libsecp256k1 = "0.3.5"
tiny-keccak = "2.0.2"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "statemint" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "statemint" }
serde_json = "1.0.61"

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-nicks/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"pallet-randomness-collective-flip/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
]
