[package]
name = "polkadot-test-service"
version = "0.9.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4.2"
tracing = "0.1.25"
rand = "0.8.3"
tempfile = "3.2.0"

# Polkadot dependencies
polkadot-overseer = { path = "../../overseer" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-parachain = { path = "../../../parachain" }
polkadot-rpc = { path = "../../../rpc" }
polkadot-runtime-common = { path = "../../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-primitives = { path = "../../primitives" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-aura-build-verifier" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-aura-build-verifier" }
serde_json = "1.0.61"
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "bkchr-aura-build-verifier" }
tokio = { version = "0.2", features = ["macros"] }
